added TextArea component

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -21,7 +21,7 @@
     }
 
     @media screen and (max-width: 767px) {
-      .logo {
+      .mainLogo {
         display: none;
       }
       .mobileLogo {
