--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,6 @@
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
 @font-face {
   src: url("../../public/fonts/Gilroy-Regular.ttf");
   font-family: 'Gilroy';
@@ -12,30 +15,42 @@
   font-weight: 700;
 }
 
+@font-face {
+  src: url("../../public/fonts/Nekst-Black.otf");
+  font-family: 'Nekst-Black';
+  font-style: normal;
+  font-weight: 900;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  list-style: none;
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1344px;
   margin: 0 auto;
   padding: 0 16px;
 }
 
 body {
   font-family: 'Gilroy', sans-serif;
+  font-style: normal;
+  font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  font-style: normal;
 }
 
 a {
-  //color: inherit;
   text-decoration: none;
 }
 
 button {
   cursor: pointer;
 }
+
